<?xml version="1.0"?>
<package format="2">
  <name>vtc_bringup</name>
  <version>1.0.0</version>
  <description>The vtc_ue_bringup package</description>

  <maintainer email="yoshida@furo.org">Tomoaki Yoshida</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cage_ros_bridge</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>

  </export>
</package>
